--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.10.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
